# tttui

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/tttui_app/: Cargo.toml
crates/tttui_app/assets/languages/: russian.txt
crates/tttui_app/assets/quotes/: russian.txt
crates/tttui_app/assets/themes/: catppuccin-mocha.toml  default.toml  nord.toml
crates/tttui_app/src/: app.rs  lib.rs  main.rs
crates/tttui_app/src/config/: app_config.rs  app_paths.rs  mod.rs
crates/tttui_app/src/features/: mod.rs
crates/tttui_app/src/features/preferences/application/: ports.rs
crates/tttui_app/src/features/preferences/domain/: keybinding.rs  mod.rs  theme.rs
crates/tttui_app/src/features/preferences/infrastructure/: file_preferences_repository.rs  mod.rs
crates/tttui_app/src/features/session_history/presentation/: render.rs
crates/tttui_app/src/features/typing_test/application/: ports.rs  use_cases.rs
crates/tttui_app/src/features/typing_test/domain/: mod.rs  result.rs  session.rs  test_mode.rs
crates/tttui_app/src/features/typing_test/infrastructure/: file_content_repository.rs  mod.rs
crates/tttui_app/src/features/typing_test/presentation/: render.rs
crates/tttui_core/: Cargo.toml
crates/tttui_core/src/: lib.rs
crates/tttui_core/src/core/: error.rs  result.rs
docs/: configuration.md  publishing.md
