[workspace]
members = ["crates/tttui_app", "crates/tttui_core"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
crossterm = "0.28"
dirs = "6"
rand = "0.9"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
