[package]
name = "tttui"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
crossterm.workspace = true
dirs.workspace = true
rand.workspace = true
ratatui.workspace = true
serde.workspace = true
toml.workspace = true
tttui_core = { path = "../tttui_core" }

[[bin]]
name = "tttui"
path = "src/main.rs"
